--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 	background: -webkit-linear-gradient(rgba(39,9,236,0.66) 0%, #ffffff 100%);
 	padding: 20px;
 	text-align: center;
+	color: gold;
 }
 
 .content{
